parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statements_list
Rule 1     number -> INT
Rule 2     number -> FLOAT
Rule 3     expression -> ID
Rule 4     expression -> number
Rule 5     expression -> STRING
Rule 6     inner_table -> expression , expression
Rule 7     inner_table -> inner_table , expression
Rule 8     expression -> [ expression ]
Rule 9     expression -> [ inner_table ]
Rule 10    expression -> ZEROS ( expression )
Rule 11    expression -> EYE ( expression )
Rule 12    expression -> ONES ( expression )
Rule 13    range -> expression : expression
Rule 14    expression -> MINUS expression
Rule 15    expression -> expression PLUS expression
Rule 16    expression -> expression MINUS expression
Rule 17    expression -> expression TIMES expression
Rule 18    expression -> expression DIVIDE expression
Rule 19    expression -> expression PLUS_MAT expression
Rule 20    expression -> expression MINUS_MAT expression
Rule 21    expression -> expression TIMES_MAT expression
Rule 22    expression -> expression DIVIDE_MAT expression
Rule 23    expression -> expression TRANSPOSE
Rule 24    expression -> expression EQ expression
Rule 25    expression -> expression NE expression
Rule 26    expression -> expression GT expression
Rule 27    expression -> expression GE expression
Rule 28    expression -> expression LT expression
Rule 29    expression -> expression LE expression
Rule 30    statement -> ID ASSIGN expression ;
Rule 31    statement -> ID MINUS_ASSIGN expression ;
Rule 32    statement -> ID PLUS_ASSIGN expression ;
Rule 33    statement -> ID TIMES_ASSIGN expression ;
Rule 34    statement -> ID DIVIDE_ASSIGN expression ;
Rule 35    slice -> ID [ expression ]
Rule 36    slice -> ID [ range ]
Rule 37    slice -> ID [ expression , expression ]
Rule 38    slice -> ID [ expression , range ]
Rule 39    slice -> ID [ range , expression ]
Rule 40    slice -> ID [ range , range ]
Rule 41    statement -> slice ASSIGN expression ;
Rule 42    statement -> slice MINUS_ASSIGN expression ;
Rule 43    statement -> slice PLUS_ASSIGN expression ;
Rule 44    statement -> slice TIMES_ASSIGN expression ;
Rule 45    statement -> slice DIVIDE_ASSIGN expression ;
Rule 46    expression -> slice
Rule 47    statements_list -> statements_list statement
Rule 48    statements_list -> statements_list code_block
Rule 49    statements_list -> statement statement
Rule 50    statements_list -> statement code_block
Rule 51    statement -> RETURN ;
Rule 52    statement -> RETURN expression ;
Rule 53    code_block -> { statements_list }
Rule 54    code_block -> { statement }
Rule 55    statement -> BREAK ;
Rule 56    statement -> CONTINUE ;
Rule 57    statement -> FOR ID ASSIGN range code_block
Rule 58    statement -> FOR ID ASSIGN range statement
Rule 59    statement -> WHILE ( expression ) code_block
Rule 60    statement -> WHILE ( expression ) statement
Rule 61    statement -> IF ( expression ) statement
Rule 62    statement -> IF ( expression ) code_block
Rule 63    statement -> IF ( expression ) statement else_block
Rule 64    statement -> IF ( expression ) code_block else_block
Rule 65    else_block -> ELSE statement
Rule 66    else_block -> ELSE code_block
Rule 67    statement -> PRINT inner_table ;
Rule 68    statement -> PRINT expression ;

Terminals, with rules where they appear

(                    : 10 11 12 59 60 61 62 63 64
)                    : 10 11 12 59 60 61 62 63 64
,                    : 6 7 37 38 39 40
:                    : 13
;                    : 30 31 32 33 34 41 42 43 44 45 51 52 55 56 67 68
ASSIGN               : 30 41 57 58
BREAK                : 55
CONTINUE             : 56
DIVIDE               : 18
DIVIDE_ASSIGN        : 34 45
DIVIDE_MAT           : 22
ELSE                 : 65 66
EQ                   : 24
EYE                  : 11
FLOAT                : 2
FOR                  : 57 58
GE                   : 27
GT                   : 26
ID                   : 3 30 31 32 33 34 35 36 37 38 39 40 57 58
IF                   : 61 62 63 64
INT                  : 1
LE                   : 29
LT                   : 28
MINUS                : 14 16
MINUS_ASSIGN         : 31 42
MINUS_MAT            : 20
NE                   : 25
ONES                 : 12
PLUS                 : 15
PLUS_ASSIGN          : 32 43
PLUS_MAT             : 19
PRINT                : 67 68
RETURN               : 51 52
STRING               : 5
TIMES                : 17
TIMES_ASSIGN         : 33 44
TIMES_MAT            : 21
TRANSPOSE            : 23
WHILE                : 59 60
ZEROS                : 10
[                    : 8 9 35 36 37 38 39 40
]                    : 8 9 35 36 37 38 39 40
error                : 
{                    : 53 54
}                    : 53 54

Nonterminals, with rules where they appear

code_block           : 48 50 57 59 62 64 66
else_block           : 63 64
expression           : 6 6 7 8 10 11 12 13 13 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 24 24 25 25 26 26 27 27 28 28 29 29 30 31 32 33 34 35 37 37 38 39 41 42 43 44 45 52 59 60 61 62 63 64 68
inner_table          : 7 9 67
number               : 4
range                : 36 38 39 40 40 57 58
slice                : 41 42 43 44 45 46
statement            : 47 49 49 50 54 58 60 61 63 65
statements_list      : 47 48 53 0

Parsing method: LALR

state 0

    (0) S' -> . statements_list
    (47) statements_list -> . statements_list statement
    (48) statements_list -> . statements_list code_block
    (49) statements_list -> . statement statement
    (50) statements_list -> . statement code_block
    (30) statement -> . ID ASSIGN expression ;
    (31) statement -> . ID MINUS_ASSIGN expression ;
    (32) statement -> . ID PLUS_ASSIGN expression ;
    (33) statement -> . ID TIMES_ASSIGN expression ;
    (34) statement -> . ID DIVIDE_ASSIGN expression ;
    (41) statement -> . slice ASSIGN expression ;
    (42) statement -> . slice MINUS_ASSIGN expression ;
    (43) statement -> . slice PLUS_ASSIGN expression ;
    (44) statement -> . slice TIMES_ASSIGN expression ;
    (45) statement -> . slice DIVIDE_ASSIGN expression ;
    (51) statement -> . RETURN ;
    (52) statement -> . RETURN expression ;
    (55) statement -> . BREAK ;
    (56) statement -> . CONTINUE ;
    (57) statement -> . FOR ID ASSIGN range code_block
    (58) statement -> . FOR ID ASSIGN range statement
    (59) statement -> . WHILE ( expression ) code_block
    (60) statement -> . WHILE ( expression ) statement
    (61) statement -> . IF ( expression ) statement
    (62) statement -> . IF ( expression ) code_block
    (63) statement -> . IF ( expression ) statement else_block
    (64) statement -> . IF ( expression ) code_block else_block
    (67) statement -> . PRINT inner_table ;
    (68) statement -> . PRINT expression ;
    (35) slice -> . ID [ expression ]
    (36) slice -> . ID [ range ]
    (37) slice -> . ID [ expression , expression ]
    (38) slice -> . ID [ expression , range ]
    (39) slice -> . ID [ range , expression ]
    (40) slice -> . ID [ range , range ]

    ID              shift and go to state 3
    RETURN          shift and go to state 5
    BREAK           shift and go to state 6
    CONTINUE        shift and go to state 7
    FOR             shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    PRINT           shift and go to state 11

    statements_list                shift and go to state 1
    statement                      shift and go to state 2
    slice                          shift and go to state 4

state 1

    (0) S' -> statements_list .
    (47) statements_list -> statements_list . statement
    (48) statements_list -> statements_list . code_block
    (30) statement -> . ID ASSIGN expression ;
    (31) statement -> . ID MINUS_ASSIGN expression ;
    (32) statement -> . ID PLUS_ASSIGN expression ;
    (33) statement -> . ID TIMES_ASSIGN expression ;
    (34) statement -> . ID DIVIDE_ASSIGN expression ;
    (41) statement -> . slice ASSIGN expression ;
    (42) statement -> . slice MINUS_ASSIGN expression ;
    (43) statement -> . slice PLUS_ASSIGN expression ;
    (44) statement -> . slice TIMES_ASSIGN expression ;
    (45) statement -> . slice DIVIDE_ASSIGN expression ;
    (51) statement -> . RETURN ;
    (52) statement -> . RETURN expression ;
    (55) statement -> . BREAK ;
    (56) statement -> . CONTINUE ;
    (57) statement -> . FOR ID ASSIGN range code_block
    (58) statement -> . FOR ID ASSIGN range statement
    (59) statement -> . WHILE ( expression ) code_block
    (60) statement -> . WHILE ( expression ) statement
    (61) statement -> . IF ( expression ) statement
    (62) statement -> . IF ( expression ) code_block
    (63) statement -> . IF ( expression ) statement else_block
    (64) statement -> . IF ( expression ) code_block else_block
    (67) statement -> . PRINT inner_table ;
    (68) statement -> . PRINT expression ;
    (53) code_block -> . { statements_list }
    (54) code_block -> . { statement }
    (35) slice -> . ID [ expression ]
    (36) slice -> . ID [ range ]
    (37) slice -> . ID [ expression , expression ]
    (38) slice -> . ID [ expression , range ]
    (39) slice -> . ID [ range , expression ]
    (40) slice -> . ID [ range , range ]

    ID              shift and go to state 3
    RETURN          shift and go to state 5
    BREAK           shift and go to state 6
    CONTINUE        shift and go to state 7
    FOR             shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    PRINT           shift and go to state 11
    {               shift and go to state 14

    statement                      shift and go to state 12
    code_block                     shift and go to state 13
    slice                          shift and go to state 4

state 2

    (49) statements_list -> statement . statement
    (50) statements_list -> statement . code_block
    (30) statement -> . ID ASSIGN expression ;
    (31) statement -> . ID MINUS_ASSIGN expression ;
    (32) statement -> . ID PLUS_ASSIGN expression ;
    (33) statement -> . ID TIMES_ASSIGN expression ;
    (34) statement -> . ID DIVIDE_ASSIGN expression ;
    (41) statement -> . slice ASSIGN expression ;
    (42) statement -> . slice MINUS_ASSIGN expression ;
    (43) statement -> . slice PLUS_ASSIGN expression ;
    (44) statement -> . slice TIMES_ASSIGN expression ;
    (45) statement -> . slice DIVIDE_ASSIGN expression ;
    (51) statement -> . RETURN ;
    (52) statement -> . RETURN expression ;
    (55) statement -> . BREAK ;
    (56) statement -> . CONTINUE ;
    (57) statement -> . FOR ID ASSIGN range code_block
    (58) statement -> . FOR ID ASSIGN range statement
    (59) statement -> . WHILE ( expression ) code_block
    (60) statement -> . WHILE ( expression ) statement
    (61) statement -> . IF ( expression ) statement
    (62) statement -> . IF ( expression ) code_block
    (63) statement -> . IF ( expression ) statement else_block
    (64) statement -> . IF ( expression ) code_block else_block
    (67) statement -> . PRINT inner_table ;
    (68) statement -> . PRINT expression ;
    (53) code_block -> . { statements_list }
    (54) code_block -> . { statement }
    (35) slice -> . ID [ expression ]
    (36) slice -> . ID [ range ]
    (37) slice -> . ID [ expression , expression ]
    (38) slice -> . ID [ expression , range ]
    (39) slice -> . ID [ range , expression ]
    (40) slice -> . ID [ range , range ]

    ID              shift and go to state 3
    RETURN          shift and go to state 5
    BREAK           shift and go to state 6
    CONTINUE        shift and go to state 7
    FOR             shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    PRINT           shift and go to state 11
    {               shift and go to state 14

    statement                      shift and go to state 15
    code_block                     shift and go to state 16
    slice                          shift and go to state 4

state 3

    (30) statement -> ID . ASSIGN expression ;
    (31) statement -> ID . MINUS_ASSIGN expression ;
    (32) statement -> ID . PLUS_ASSIGN expression ;
    (33) statement -> ID . TIMES_ASSIGN expression ;
    (34) statement -> ID . DIVIDE_ASSIGN expression ;
    (35) slice -> ID . [ expression ]
    (36) slice -> ID . [ range ]
    (37) slice -> ID . [ expression , expression ]
    (38) slice -> ID . [ expression , range ]
    (39) slice -> ID . [ range , expression ]
    (40) slice -> ID . [ range , range ]

    ASSIGN          shift and go to state 17
    MINUS_ASSIGN    shift and go to state 18
    PLUS_ASSIGN     shift and go to state 19
    TIMES_ASSIGN    shift and go to state 20
    DIVIDE_ASSIGN   shift and go to state 21
    [               shift and go to state 22


state 4

    (41) statement -> slice . ASSIGN expression ;
    (42) statement -> slice . MINUS_ASSIGN expression ;
    (43) statement -> slice . PLUS_ASSIGN expression ;
    (44) statement -> slice . TIMES_ASSIGN expression ;
    (45) statement -> slice . DIVIDE_ASSIGN expression ;

    ASSIGN          shift and go to state 23
    MINUS_ASSIGN    shift and go to state 24
    PLUS_ASSIGN     shift and go to state 25
    TIMES_ASSIGN    shift and go to state 26
    DIVIDE_ASSIGN   shift and go to state 27


state 5

    (51) statement -> RETURN . ;
    (52) statement -> RETURN . expression ;
    (3) expression -> . ID
    (4) expression -> . number
    (5) expression -> . STRING
    (8) expression -> . [ expression ]
    (9) expression -> . [ inner_table ]
    (10) expression -> . ZEROS ( expression )
    (11) expression -> . EYE ( expression )
    (12) expression -> . ONES ( expression )
    (14) expression -> . MINUS expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression PLUS_MAT expression
    (20) expression -> . expression MINUS_MAT expression
    (21) expression -> . expression TIMES_MAT expression
    (22) expression -> . expression DIVIDE_MAT expression
    (23) expression -> . expression TRANSPOSE
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression GT expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression LE expression
    (46) expression -> . slice
    (1) number -> . INT
    (2) number -> . FLOAT
    (35) slice -> . ID [ expression ]
    (36) slice -> . ID [ range ]
    (37) slice -> . ID [ expression , expression ]
    (38) slice -> . ID [ expression , range ]
    (39) slice -> . ID [ range , expression ]
    (40) slice -> . ID [ range , range ]

    ;               shift and go to state 28
    ID              shift and go to state 30
    STRING          shift and go to state 32
    [               shift and go to state 33
    ZEROS           shift and go to state 34
    EYE             shift and go to state 35
    ONES            shift and go to state 36
    MINUS           shift and go to state 37
    INT             shift and go to state 39
    FLOAT           shift and go to state 40

    expression                     shift and go to state 29
    number                         shift and go to state 31
    slice                          shift and go to state 38

state 6

    (55) statement -> BREAK . ;

    ;               shift and go to state 41


state 7

    (56) statement -> CONTINUE . ;

    ;               shift and go to state 42


state 8

    (57) statement -> FOR . ID ASSIGN range code_block
    (58) statement -> FOR . ID ASSIGN range statement

    ID              shift and go to state 43


state 9

    (59) statement -> WHILE . ( expression ) code_block
    (60) statement -> WHILE . ( expression ) statement

    (               shift and go to state 44


state 10

    (61) statement -> IF . ( expression ) statement
    (62) statement -> IF . ( expression ) code_block
    (63) statement -> IF . ( expression ) statement else_block
    (64) statement -> IF . ( expression ) code_block else_block

    (               shift and go to state 45


state 11

    (67) statement -> PRINT . inner_table ;
    (68) statement -> PRINT . expression ;
    (6) inner_table -> . expression , expression
    (7) inner_table -> . inner_table , expression
    (3) expression -> . ID
    (4) expression -> . number
    (5) expression -> . STRING
    (8) expression -> . [ expression ]
    (9) expression -> . [ inner_table ]
    (10) expression -> . ZEROS ( expression )
    (11) expression -> . EYE ( expression )
    (12) expression -> . ONES ( expression )
    (14) expression -> . MINUS expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression PLUS_MAT expression
    (20) expression -> . expression MINUS_MAT expression
    (21) expression -> . expression TIMES_MAT expression
    (22) expression -> . expression DIVIDE_MAT expression
    (23) expression -> . expression TRANSPOSE
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression GT expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression LE expression
    (46) expression -> . slice
    (1) number -> . INT
    (2) number -> . FLOAT
    (35) slice -> . ID [ expression ]
    (36) slice -> . ID [ range ]
    (37) slice -> . ID [ expression , expression ]
    (38) slice -> . ID [ expression , range ]
    (39) slice -> . ID [ range , expression ]
    (40) slice -> . ID [ range , range ]

    ID              shift and go to state 30
    STRING          shift and go to state 32
    [               shift and go to state 33
    ZEROS           shift and go to state 34
    EYE             shift and go to state 35
    ONES            shift and go to state 36
    MINUS           shift and go to state 37
    INT             shift and go to state 39
    FLOAT           shift and go to state 40

    inner_table                    shift and go to state 46
    expression                     shift and go to state 47
    number                         shift and go to state 31
    slice                          shift and go to state 38

state 12

    (47) statements_list -> statements_list statement .

    ID              reduce using rule 47 (statements_list -> statements_list statement .)
    RETURN          reduce using rule 47 (statements_list -> statements_list statement .)
    BREAK           reduce using rule 47 (statements_list -> statements_list statement .)
    CONTINUE        reduce using rule 47 (statements_list -> statements_list statement .)
    FOR             reduce using rule 47 (statements_list -> statements_list statement .)
    WHILE           reduce using rule 47 (statements_list -> statements_list statement .)
    IF              reduce using rule 47 (statements_list -> statements_list statement .)
    PRINT           reduce using rule 47 (statements_list -> statements_list statement .)
    {               reduce using rule 47 (statements_list -> statements_list statement .)
    $end            reduce using rule 47 (statements_list -> statements_list statement .)
    }               reduce using rule 47 (statements_list -> statements_list statement .)


state 13

    (48) statements_list -> statements_list code_block .

    ID              reduce using rule 48 (statements_list -> statements_list code_block .)
    RETURN          reduce using rule 48 (statements_list -> statements_list code_block .)
    BREAK           reduce using rule 48 (statements_list -> statements_list code_block .)
    CONTINUE        reduce using rule 48 (statements_list -> statements_list code_block .)
    FOR             reduce using rule 48 (statements_list -> statements_list code_block .)
    WHILE           reduce using rule 48 (statements_list -> statements_list code_block .)
    IF              reduce using rule 48 (statements_list -> statements_list code_block .)
    PRINT           reduce using rule 48 (statements_list -> statements_list code_block .)
    {               reduce using rule 48 (statements_list -> statements_list code_block .)
    $end            reduce using rule 48 (statements_list -> statements_list code_block .)
    }               reduce using rule 48 (statements_list -> statements_list code_block .)


state 14

    (53) code_block -> { . statements_list }
    (54) code_block -> { . statement }
    (47) statements_list -> . statements_list statement
    (48) statements_list -> . statements_list code_block
    (49) statements_list -> . statement statement
    (50) statements_list -> . statement code_block
    (30) statement -> . ID ASSIGN expression ;
    (31) statement -> . ID MINUS_ASSIGN expression ;
    (32) statement -> . ID PLUS_ASSIGN expression ;
    (33) statement -> . ID TIMES_ASSIGN expression ;
    (34) statement -> . ID DIVIDE_ASSIGN expression ;
    (41) statement -> . slice ASSIGN expression ;
    (42) statement -> . slice MINUS_ASSIGN expression ;
    (43) statement -> . slice PLUS_ASSIGN expression ;
    (44) statement -> . slice TIMES_ASSIGN expression ;
    (45) statement -> . slice DIVIDE_ASSIGN expression ;
    (51) statement -> . RETURN ;
    (52) statement -> . RETURN expression ;
    (55) statement -> . BREAK ;
    (56) statement -> . CONTINUE ;
    (57) statement -> . FOR ID ASSIGN range code_block
    (58) statement -> . FOR ID ASSIGN range statement
    (59) statement -> . WHILE ( expression ) code_block
    (60) statement -> . WHILE ( expression ) statement
    (61) statement -> . IF ( expression ) statement
    (62) statement -> . IF ( expression ) code_block
    (63) statement -> . IF ( expression ) statement else_block
    (64) statement -> . IF ( expression ) code_block else_block
    (67) statement -> . PRINT inner_table ;
    (68) statement -> . PRINT expression ;
    (35) slice -> . ID [ expression ]
    (36) slice -> . ID [ range ]
    (37) slice -> . ID [ expression , expression ]
    (38) slice -> . ID [ expression , range ]
    (39) slice -> . ID [ range , expression ]
    (40) slice -> . ID [ range , range ]

    ID              shift and go to state 3
    RETURN          shift and go to state 5
    BREAK           shift and go to state 6
    CONTINUE        shift and go to state 7
    FOR             shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    PRINT           shift and go to state 11

    statements_list                shift and go to state 48
    statement                      shift and go to state 49
    slice                          shift and go to state 4

state 15

    (49) statements_list -> statement statement .

    ID              reduce using rule 49 (statements_list -> statement statement .)
    RETURN          reduce using rule 49 (statements_list -> statement statement .)
    BREAK           reduce using rule 49 (statements_list -> statement statement .)
    CONTINUE        reduce using rule 49 (statements_list -> statement statement .)
    FOR             reduce using rule 49 (statements_list -> statement statement .)
    WHILE           reduce using rule 49 (statements_list -> statement statement .)
    IF              reduce using rule 49 (statements_list -> statement statement .)
    PRINT           reduce using rule 49 (statements_list -> statement statement .)
    {               reduce using rule 49 (statements_list -> statement statement .)
    $end            reduce using rule 49 (statements_list -> statement statement .)
    }               reduce using rule 49 (statements_list -> statement statement .)


state 16

    (50) statements_list -> statement code_block .

    ID              reduce using rule 50 (statements_list -> statement code_block .)
    RETURN          reduce using rule 50 (statements_list -> statement code_block .)
    BREAK           reduce using rule 50 (statements_list -> statement code_block .)
    CONTINUE        reduce using rule 50 (statements_list -> statement code_block .)
    FOR             reduce using rule 50 (statements_list -> statement code_block .)
    WHILE           reduce using rule 50 (statements_list -> statement code_block .)
    IF              reduce using rule 50 (statements_list -> statement code_block .)
    PRINT           reduce using rule 50 (statements_list -> statement code_block .)
    {               reduce using rule 50 (statements_list -> statement code_block .)
    $end            reduce using rule 50 (statements_list -> statement code_block .)
    }               reduce using rule 50 (statements_list -> statement code_block .)


state 17

    (30) statement -> ID ASSIGN . expression ;
    (3) expression -> . ID
    (4) expression -> . number
    (5) expression -> . STRING
    (8) expression -> . [ expression ]
    (9) expression -> . [ inner_table ]
    (10) expression -> . ZEROS ( expression )
    (11) expression -> . EYE ( expression )
    (12) expression -> . ONES ( expression )
    (14) expression -> . MINUS expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression PLUS_MAT expression
    (20) expression -> . expression MINUS_MAT expression
    (21) expression -> . expression TIMES_MAT expression
    (22) expression -> . expression DIVIDE_MAT expression
    (23) expression -> . expression TRANSPOSE
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression GT expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression LE expression
    (46) expression -> . slice
    (1) number -> . INT
    (2) number -> . FLOAT
    (35) slice -> . ID [ expression ]
    (36) slice -> . ID [ range ]
    (37) slice -> . ID [ expression , expression ]
    (38) slice -> . ID [ expression , range ]
    (39) slice -> . ID [ range , expression ]
    (40) slice -> . ID [ range , range ]

    ID              shift and go to state 30
    STRING          shift and go to state 32
    [               shift and go to state 33
    ZEROS           shift and go to state 34
    EYE             shift and go to state 35
    ONES            shift and go to state 36
    MINUS           shift and go to state 37
    INT             shift and go to state 39
    FLOAT           shift and go to state 40

    expression                     shift and go to state 50
    number                         shift and go to state 31
    slice                          shift and go to state 38

state 18

    (31) statement -> ID MINUS_ASSIGN . expression ;
    (3) expression -> . ID
    (4) expression -> . number
    (5) expression -> . STRING
    (8) expression -> . [ expression ]
    (9) expression -> . [ inner_table ]
    (10) expression -> . ZEROS ( expression )
    (11) expression -> . EYE ( expression )
    (12) expression -> . ONES ( expression )
    (14) expression -> . MINUS expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression PLUS_MAT expression
    (20) expression -> . expression MINUS_MAT expression
    (21) expression -> . expression TIMES_MAT expression
    (22) expression -> . expression DIVIDE_MAT expression
    (23) expression -> . expression TRANSPOSE
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression GT expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression LE expression
    (46) expression -> . slice
    (1) number -> . INT
    (2) number -> . FLOAT
    (35) slice -> . ID [ expression ]
    (36) slice -> . ID [ range ]
    (37) slice -> . ID [ expression , expression ]
    (38) slice -> . ID [ expression , range ]
    (39) slice -> . ID [ range , expression ]
    (40) slice -> . ID [ range , range ]

    ID              shift and go to state 30
    STRING          shift and go to state 32
    [               shift and go to state 33
    ZEROS           shift and go to state 34
    EYE             shift and go to state 35
    ONES            shift and go to state 36
    MINUS           shift and go to state 37
    INT             shift and go to state 39
    FLOAT           shift and go to state 40

    expression                     shift and go to state 51
    number                         shift and go to state 31
    slice                          shift and go to state 38

state 19

    (32) statement -> ID PLUS_ASSIGN . expression ;
    (3) expression -> . ID
    (4) expression -> . number
    (5) expression -> . STRING
    (8) expression -> . [ expression ]
    (9) expression -> . [ inner_table ]
    (10) expression -> . ZEROS ( expression )
    (11) expression -> . EYE ( expression )
    (12) expression -> . ONES ( expression )
    (14) expression -> . MINUS expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression PLUS_MAT expression
    (20) expression -> . expression MINUS_MAT expression
    (21) expression -> . expression TIMES_MAT expression
    (22) expression -> . expression DIVIDE_MAT expression
    (23) expression -> . expression TRANSPOSE
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression GT expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression LE expression
    (46) expression -> . slice
    (1) number -> . INT
    (2) number -> . FLOAT
    (35) slice -> . ID [ expression ]
    (36) slice -> . ID [ range ]
    (37) slice -> . ID [ expression , expression ]
    (38) slice -> . ID [ expression , range ]
    (39) slice -> . ID [ range , expression ]
    (40) slice -> . ID [ range , range ]

    ID              shift and go to state 30
    STRING          shift and go to state 32
    [               shift and go to state 33
    ZEROS           shift and go to state 34
    EYE             shift and go to state 35
    ONES            shift and go to state 36
    MINUS           shift and go to state 37
    INT             shift and go to state 39
    FLOAT           shift and go to state 40

    expression                     shift and go to state 52
    number                         shift and go to state 31
    slice                          shift and go to state 38

state 20

    (33) statement -> ID TIMES_ASSIGN . expression ;
    (3) expression -> . ID
    (4) expression -> . number
    (5) expression -> . STRING
    (8) expression -> . [ expression ]
    (9) expression -> . [ inner_table ]
    (10) expression -> . ZEROS ( expression )
    (11) expression -> . EYE ( expression )
    (12) expression -> . ONES ( expression )
    (14) expression -> . MINUS expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression PLUS_MAT expression
    (20) expression -> . expression MINUS_MAT expression
    (21) expression -> . expression TIMES_MAT expression
    (22) expression -> . expression DIVIDE_MAT expression
    (23) expression -> . expression TRANSPOSE
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression GT expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression LE expression
    (46) expression -> . slice
    (1) number -> . INT
    (2) number -> . FLOAT
    (35) slice -> . ID [ expression ]
    (36) slice -> . ID [ range ]
    (37) slice -> . ID [ expression , expression ]
    (38) slice -> . ID [ expression , range ]
    (39) slice -> . ID [ range , expression ]
    (40) slice -> . ID [ range , range ]

    ID              shift and go to state 30
    STRING          shift and go to state 32
    [               shift and go to state 33
    ZEROS           shift and go to state 34
    EYE             shift and go to state 35
    ONES            shift and go to state 36
    MINUS           shift and go to state 37
    INT             shift and go to state 39
    FLOAT           shift and go to state 40

    expression                     shift and go to state 53
    number                         shift and go to state 31
    slice                          shift and go to state 38

state 21

    (34) statement -> ID DIVIDE_ASSIGN . expression ;
    (3) expression -> . ID
    (4) expression -> . number
    (5) expression -> . STRING
    (8) expression -> . [ expression ]
    (9) expression -> . [ inner_table ]
    (10) expression -> . ZEROS ( expression )
    (11) expression -> . EYE ( expression )
    (12) expression -> . ONES ( expression )
    (14) expression -> . MINUS expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression PLUS_MAT expression
    (20) expression -> . expression MINUS_MAT expression
    (21) expression -> . expression TIMES_MAT expression
    (22) expression -> . expression DIVIDE_MAT expression
    (23) expression -> . expression TRANSPOSE
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression GT expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression LE expression
    (46) expression -> . slice
    (1) number -> . INT
    (2) number -> . FLOAT
    (35) slice -> . ID [ expression ]
    (36) slice -> . ID [ range ]
    (37) slice -> . ID [ expression , expression ]
    (38) slice -> . ID [ expression , range ]
    (39) slice -> . ID [ range , expression ]
    (40) slice -> . ID [ range , range ]

    ID              shift and go to state 30
    STRING          shift and go to state 32
    [               shift and go to state 33
    ZEROS           shift and go to state 34
    EYE             shift and go to state 35
    ONES            shift and go to state 36
    MINUS           shift and go to state 37
    INT             shift and go to state 39
    FLOAT           shift and go to state 40

    expression                     shift and go to state 54
    number                         shift and go to state 31
    slice                          shift and go to state 38

state 22

    (35) slice -> ID [ . expression ]
    (36) slice -> ID [ . range ]
    (37) slice -> ID [ . expression , expression ]
    (38) slice -> ID [ . expression , range ]
    (39) slice -> ID [ . range , expression ]
    (40) slice -> ID [ . range , range ]
    (3) expression -> . ID
    (4) expression -> . number
    (5) expression -> . STRING
    (8) expression -> . [ expression ]
    (9) expression -> . [ inner_table ]
    (10) expression -> . ZEROS ( expression )
    (11) expression -> . EYE ( expression )
    (12) expression -> . ONES ( expression )
    (14) expression -> . MINUS expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression PLUS_MAT expression
    (20) expression -> . expression MINUS_MAT expression
    (21) expression -> . expression TIMES_MAT expression
    (22) expression -> . expression DIVIDE_MAT expression
    (23) expression -> . expression TRANSPOSE
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression GT expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression LE expression
    (46) expression -> . slice
    (13) range -> . expression : expression
    (1) number -> . INT
    (2) number -> . FLOAT
    (35) slice -> . ID [ expression ]
    (36) slice -> . ID [ range ]
    (37) slice -> . ID [ expression , expression ]
    (38) slice -> . ID [ expression , range ]
    (39) slice -> . ID [ range , expression ]
    (40) slice -> . ID [ range , range ]

    ID              shift and go to state 30
    STRING          shift and go to state 32
    [               shift and go to state 33
    ZEROS           shift and go to state 34
    EYE             shift and go to state 35
    ONES            shift and go to state 36
    MINUS           shift and go to state 37
    INT             shift and go to state 39
    FLOAT           shift and go to state 40

    expression                     shift and go to state 55
    range                          shift and go to state 56
    number                         shift and go to state 31
    slice                          shift and go to state 38

state 23
